k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql
  namespace: smartpost

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:

    metadata:
      labels:
        app: mysql

    spec:
      containers:

      - name: mysql

        image: mysql:5.7

        ports:
        - containerPort: 3306

        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql


      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
