k8s/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wordpress
  namespace: smartpost

spec:
  replicas: 1

  selector:
    matchLabels:
      app: wordpress

  template:

    metadata:
      labels:
        app: wordpress

    spec:
      containers:

      - name: wordpress

        image: wordpress:6.4-php8.1-apache

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
            
        ports:
        - containerPort: 80

        volumeMounts:

        - name: wp-content-storage
          mountPath: /var/www/html/wp-content


      volumes:

      - name: wp-content-storage
        persistentVolumeClaim:
          claimName: wordpress-pvc
