k8s/wordpress-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: wordpress
  namespace: smartpost

spec:
  selector:
    app: wordpress

  ports:
    - port: 80
      targetPort: 80

  type: NodePort
