k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: wordpress-ingress
  namespace: smartpost

spec:
  rules:

  - host: smartpost.local

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: wordpress
            port:
              number: 80
